Feat/create recipe (#17)
* feat: working version of create recipe

* feat: receipt for both animal and vegetable foods

* fix: tests

* feat: create ingredient food relantionships

* fix: lint errors

* feat: create basket

* feat: allow to use another recipe as an ingredient

* chore: remove vendor
