# src/recipe/handler.go
@@ -2,9 +2,13 @@ package recipe
 
 import (
 	"encoding/json"
+	"fmt"
 	"net/http"
+	"time"
 
+	"github.com/google/uuid"
 	"github.com/matheuslc/guiomar/src/direction"
+	"github.com/matheuslc/guiomar/src/food"
 	"github.com/matheuslc/guiomar/src/ingredient"
 	m "github.com/matheuslc/guiomar/src/measurements"
 	"github.com/matheuslc/guiomar/src/step"
@@ -16,9 +20,9 @@ type createRecipePayload struct {
 	CookDuration    m.Minute                       `json:"cook_duration"`
 	Ingredients     []ingredient.IngredientPayload `json:"ingredients"`
 	Direction       []step.StepPayload             `json:"directions"`
-	PreparationTime m.PreparationTime              `json:"preparation_time"`
-	Serving         m.Serving                      `json:"serving"`
-	Yield           m.Yield                        `json:"yield"`
+	PreparationTime time.Duration                  `json:"preparation_time"`
+	Serving         int64                          `json:"serving"`
+	Yield           int64                          `json:"yield"`
 }
 
 // NewRecipeHandlerWrapper godoc
@@ -29,25 +33,26 @@ type createRecipePayload struct {
 // @Produce      application/json
 // @Param        body body createRecipePayload true "Create a new recipe"
 // @Router       /api/recipes [post]
-func NewRecipeHandlerWrapper(repo Repository) func(http.ResponseWriter, *http.Request) {
+func NewRecipeHandlerWrapper(repo Repository, foodRepository food.Repository, ingredientRepository ingredient.Repository) func(http.ResponseWriter, *http.Request) {
 	// there are known race conditions using a closure
 	// make sure to test and measure it!
 	return func(w http.ResponseWriter, r *http.Request) {
-		handler(repo, w, r)
+		handler(repo, foodRepository, ingredientRepository, w, r)
 	}
 }
 
-func handler(repo Repository, w http.ResponseWriter, r *http.Request) {
+func handler(repo Repository, foodRepository food.Repository, ingredientRepository ingredient.Repository, w http.ResponseWriter, r *http.Request) {
 	payload := createRecipePayload{}
 	err := json.NewDecoder(r.Body).Decode(&payload)
 	if err != nil {
+		fmt.Println("err", err)
 		respondWithError(w, http.StatusBadRequest, "Request params are not the expected")
 		return
 	}
 
-	ingrs, err := convertIngredients(payload.Ingredients)
+	ingrs, err := convertIngredients(payload.Ingredients, repo, foodRepository)
 	if err != nil {
-		respondWithError(w, http.StatusBadRequest, "Request params are not the expected")
+		respondWithError(w, http.StatusBadRequest, "Could not convert ingredients. Params are not the expected")
 		return
 	}
 
@@ -55,7 +60,7 @@ func handler(repo Repository, w http.ResponseWriter, r *http.Request) {
 	for i, stp := range payload.Direction {
 		parsed, err := step.NewStep(stp.Description, stp.Duration)
 		if err != nil {
-			respondWithError(w, http.StatusBadRequest, "Request params are not the expected")
+			respondWithError(w, http.StatusBadRequest, "Could not convert steps. Request params are not the expected")
 			return
 		}
 
@@ -74,9 +79,9 @@ func handler(repo Repository, w http.ResponseWriter, r *http.Request) {
 		ingrs,
 		di,
 		m.Minute((payload.CookDuration)),
-		m.PreparationTime(payload.PreparationTime),
-		m.Serving(payload.Serving),
-		m.Yield(payload.Yield),
+		payload.PreparationTime,
+		payload.Serving,
+		payload.Yield,
 	)
 
 	if err != nil {
@@ -84,24 +89,43 @@ func handler(repo Repository, w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	persistedRecipe, err := repo.Save(rec)
+	err = repo.Save(rec, ingredientRepository)
 	if err != nil {
-		respondWithError(w, http.StatusBadRequest, "Request params are not the expected")
+		respondWithError(w, http.StatusInternalServerError, "could not save recipe")
 		return
 	}
 
-	respondWithJSON(w, http.StatusOK, persistedRecipe)
+	respondWithJSON(w, http.StatusOK, map[string]string{"ok": "true"})
 }
 
-func convertIngredients(payload []ingredient.IngredientPayload) ([]ingredient.Ingredient, error) {
+func convertIngredients(payload []ingredient.IngredientPayload, recipeRepository Reader, foodRepository food.Repository) ([]ingredient.Ingredient, error) {
 	ingrs := make([]ingredient.Ingredient, len(payload))
 	for i, ingr := range payload {
-		parsed, err := ingredient.NewIngredient(ingr.Food, ingr.Amount)
-		if err != nil {
-			return nil, err
-		}
+		if ingr.Food.Type == "recipe" {
+			f, err := recipeRepository.Find(uuid.MustParse(ingr.Food.ID))
+			if err != nil {
+				return nil, err
+			}
 
-		ingrs[i] = parsed
+			parsed, err := ingredient.NewIngredient(f, ingr.Amount)
+			if err != nil {
+				return nil, err
+			}
+
+			ingrs[i] = parsed
+		} else {
+			f, err := foodRepository.Find(uuid.MustParse(ingr.Food.ID), ingr.Food.Type)
+			if err != nil {
+				return nil, err
+			}
+
+			parsed, err := ingredient.NewIngredient(f, ingr.Amount)
+			if err != nil {
+				return nil, err
+			}
+
+			ingrs[i] = parsed
+		}
 	}
 
 	return ingrs, nil
